// Copyright (c) 2019-present, Facebook, Inc.
// All rights reserved.
//
// This source code is licensed under the BSD-style license found in the
// LICENSE file in the root directory of this source tree. An additional grant
// of patent rights can be found in the PATENTS file in the same directory.

syntax = "proto3";

package eap;
option go_package = "magma/feg/gateway/services/eap/protos";

enum eap_type { // also known as EAP Methods
    // Mandatory EAP Method types
    Reserved = 0;
    Identity = 1;
    Notification = 2;
    Legacy_Nak = 3;
    MD5_Challenge = 4;

    Expanded = 254;
    Experimental= 255;

    // EAP Method Authenticator types
    TLS = 13;
    SIM = 18;
    AKA = 23;
    AKAPrime = 50;
}

enum eap_code {
    Undefined = 0;
    Request = 1;
    Response = 2;
    Success = 3;
    Failure = 4;
}

message eap_context {
    string session_id = 1;
    string imsi = 2;
    bytes msk = 3;
    string identity = 4;
    string msisdn = 5;
}

message eap {
    bytes payload = 1;
    eap_context ctx = 2;
}

service eap_service {
    rpc handle(eap) returns (eap) {}
}

message eap_identity {
    bytes payload = 1;
    eap_context ctx = 2;
    uint32 method = 3;
}

message void {
}

message method_list {
    bytes methods = 1;
}

service eap_router {
    rpc handle_identity(eap_identity) returns (eap) {}
    rpc handle(eap) returns (eap) {}
    rpc supported_methods(void) returns (method_list) {}
}
